first commit for developer1

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="#gallery">រូបម្ហូប</a>
             <a href="#review">មតិរបស់អតិថិជន    </a>
             <a href="#order">កម្មង់ឥឡូវ</a>
+            <a href="#comfirm">accep</a>
         </nav>
 
     </header>
